log
Wed 03 May 2023 03:37:21 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
58a0e25
Wed 03 May 2023 03:37:37 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
51c04c4
Wed 03 May 2023 03:37:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f884d95
Wed 03 May 2023 03:39:33 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
30b4827
Wed 03 May 2023 03:40:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ec058b2
Wed 03 May 2023 03:40:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a1d4f5c
Wed 03 May 2023 03:41:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
e10166e
Wed 03 May 2023 03:42:58 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
4b21245
Wed 03 May 2023 03:43:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
87c803a
Thu 04 May 2023 04:50:11 PM UTC: 
 sudoku.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:27: error: subscripted value is neither array nor pointer nor vector
   65 |               nuevoNodo[k][j] = j+1;
      |                           ^
Compilation failed
d5aab13
Thu 04 May 2023 04:50:28 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:27: error: subscripted value is neither array nor pointer nor vector
   65 |               nuevoNodo[i][k] = j+1;
      |                           ^
Compilation failed
887cfda
Thu 04 May 2023 04:50:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
025f591
Thu 04 May 2023 04:51:27 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
e13e750
Thu 04 May 2023 05:08:06 PM UTC: 
 sudoku.c | 51 +++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 45 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
d2d63ae
Thu 04 May 2023 05:16:29 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
043f824
Thu 04 May 2023 05:20:32 PM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘vectorCerosColumnas’ [-Werror=unused-variable]
   50 |     int*vectorCerosColumnas = calloc(9, sizeof(int));
      |         ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b189433
Thu 04 May 2023 05:20:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c415957
Thu 04 May 2023 05:23:35 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
44d9318
Thu 04 May 2023 05:23:49 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘numColumna’ [-Werror=unused-variable]
   53 |       int numColumna = n->sudo[k][i];
      |           ^~~~~~~~~~
sudoku.c:50:9: error: unused variable ‘vectorCerosColumnas’ [-Werror=unused-variable]
   50 |     int*vectorCerosColumnas = calloc(9, sizeof(int));
      |         ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a48ea69
Thu 04 May 2023 05:23:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘numColumna’ [-Werror=unused-variable]
   53 |       int numColumna = n->sudo[k][i];
      |           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d115f5a
Thu 04 May 2023 05:24:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b55b911
Thu 04 May 2023 05:26:05 PM UTC: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  5|3
total_score: 35/70
3b21db3
Fri 05 May 2023 06:47:57 PM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  5|3
total_score: 35/70
124d6d8
Sat 06 May 2023 10:52:14 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|3
total_score: 35/70
96bd612
Sat 06 May 2023 10:56:08 PM UTC: 
 sudoku.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
6795620
Sat 06 May 2023 10:59:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
130272f
Sat 06 May 2023 11:00:23 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
50aa3be
Sat 06 May 2023 11:14:44 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:161:14: error: ‘NodoCurrent’ undeclared (first use in this function); did you mean ‘nodoCurrent’?
  161 |       return NodoCurrent;
      |              ^~~~~~~~~~~
      |              nodoCurrent
sudoku.c:161:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
689d876
Sat 06 May 2023 11:14:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e2fc5fd
Sat 06 May 2023 11:16:01 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:178:13: error: ‘n’ undeclared (first use in this function)
  178 |     push(S, n);
      |             ^
sudoku.c:178:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:180:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  180 |     while(!isEmpty(S)){
      |            ^~~~~~~
      |            is_empty
sudoku.c:186:13: error: implicit declaration of function ‘destroyStack’ [-Werror=implicit-function-declaration]
  186 |             destroyStack(S);
      |             ^~~~~~~~~~~~
sudoku.c:197:9: error: implicit declaration of function ‘destroyNode’ [-Werror=implicit-function-declaration]
  197 |         destroyNode(current);
      |         ^~~~~~~~~~~
sudoku.c:198:9: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  198 |         destroyList(adj_nodes);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
71d2902
Sat 06 May 2023 11:16:26 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:178:13: error: ‘n’ undeclared (first use in this function)
  178 |     push(S, n);
      |             ^
sudoku.c:178:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:180:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  180 |     while(!isEmpty(S)){
      |            ^~~~~~~
      |            is_empty
cc1: all warnings being treated as errors
Compilation failed
280430f
Sat 06 May 2023 11:16:50 PM UTC: 
 sudoku.c | 28 +---------------------------
 1 file changed, 1 insertion(+), 27 deletions(-)
 tests:  0|0
ab14583
Sat 06 May 2023 11:18:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d1e9b0e
Sat 06 May 2023 11:19:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe61e19
Sat 06 May 2023 11:20:55 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5372c4b
